Comment Interface Addition
Added a comment to let the user know that the interface class must be implemented for this to work properly.

--- a/ApexClass/RETriggerHandler.cls
+++ b/ApexClass/RETriggerHandler.cls
@@ -1,4 +1,7 @@
-public without sharing class {{ api_name }} implements [INTERFACE_CLASS] {
+// Be sure to add the "implements InterfaceClass" that will implement
+// the interface class.
+// Eg. public without sharing class {{ api_name }} implements InterfaceClass {
+public without sharing class {{ api_name }} {
   ////////////////////////
   // Instance Variables //
   ////////////////////////
